# CFM

./: .gitignore
analyzer/: pyproject.toml
analyzer/analyzer/: __init__.py
firmwares/: call_graph_gen.py
firmwares/CNC/: CNC.json
firmwares/Console/: Console.json
firmwares/Drone/: Drone.json
firmwares/Gateway/: Gateway.json
firmwares/Heat_Press/: Heat_Press.json
firmwares/PLC/: PLC.json
firmwares/Reflow_Oven/: Reflow_Oven.json
firmwares/Robot/: Robot.json
firmwares/Soldering_Iron/: Soldering_Iron.json
firmwares/Steering_Control/: Steering_Control.json
fuzzer/: Cargo.toml
fuzzer/src/: main.rs
