[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
libafl = { path = "./LibAFL/crates/libafl/" }
libafl_bolts = { path = "./LibAFL/crates/libafl_bolts/" }
libafl_targets = { path = "./LibAFL/crates/libafl_targets" }
libafl_unicorn = { path = "./LibAFL/crates/libafl_unicorn/" }
serde_json = "1.0"

unicorn-engine = "2.1.2"
log = "0.4.25"
env_logger = "0.11.6"
clap = "4.5.40"
